[package]
name = "deptree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
kuzu = "0.7.1"
log = "0.4.20"
tempfile = "3.8.1"
pest = "2.7.15"
pest_derive = "2.7.15"
itertools = "0.14.0"
